<resources>
    <string name="app_name">Homework2</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_main">Main</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music">Music</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_string">Return to the home screen</string>
    <string name="btn_backtolist">Get to songs</string>
</resources>