<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/groupsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/menu_groups" />
    <item
        android:id="@+id/musicFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_music"
        android:title="@string/menu_music" />
    <item
        android:id="@+id/friendsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_emoji_people_24"
        android:title="@string/menu_friends" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/menu_settings" />
</menu>